// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Element snapshots > should render Element 1`] = `
<DocumentFragment>
  <div
    class="className Element"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)); height: 100px; margin: 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px; position: absolute; visibility: visible; width: 100px;"
  />
</DocumentFragment>
`;

exports[`Element snapshots > should render Element when is hidden 1`] = `
<DocumentFragment>
  <div
    class="className Element"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)); height: 100px; margin: 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px; position: absolute; visibility: hidden; width: 100px;"
  />
</DocumentFragment>
`;

exports[`Element snapshots > should render Element when is selected & is multiple moving 1`] = `
<DocumentFragment>
  <div
    class="className Element Element--moving"
    data-status="true"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)); height: 100px; margin: 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px; position: absolute; visibility: visible; width: 100px;"
  >
    <div
      class="Outline"
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    />
    <div
      class="EventsArea"
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
    >
      <div
        style="height: 100px; width: 100px;"
      />
      <svg
        class="Corners"
        style="height: 102px; left: -1px; top: -1px; width: 102px;"
      >
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="97.5"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="97.5"
        />
      </svg>
      <div
        class="TransformArea"
        style="height: 100px; width: 100px;"
      >
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--east"
          data-test-anchor-resize="east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north"
          data-test-anchor-resize="north"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north-east"
          data-test-anchor-resize="north-east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north-west"
          data-test-anchor-resize="north-west"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south"
          data-test-anchor-resize="south"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south-east"
          data-test-anchor-resize="south-east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south-west"
          data-test-anchor-resize="south-west"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--west"
          data-test-anchor-resize="west"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--north-east"
          data-test-anchor-rotate="north-east"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--north-west"
          data-test-anchor-rotate="north-west"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--south-east"
          data-test-anchor-rotate="south-east"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--south-west"
          data-test-anchor-rotate="south-west"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots > should render Element when is selected 1`] = `
<DocumentFragment>
  <div
    class="className Element"
    data-status="true"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)); height: 100px; margin: 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px; position: absolute; visibility: visible; width: 100px;"
  >
    <div
      class="Outline"
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    />
    <div
      class="EventsArea"
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
    >
      <div
        style="height: 100px; width: 100px;"
      />
      <svg
        class="Corners"
        style="height: 102px; left: -1px; top: -1px; width: 102px;"
      >
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="97.5"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="97.5"
        />
      </svg>
      <div
        class="TransformArea"
        style="height: 100px; width: 100px;"
      >
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--east"
          data-test-anchor-resize="east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north"
          data-test-anchor-resize="north"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north-east"
          data-test-anchor-resize="north-east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--north-west"
          data-test-anchor-resize="north-west"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south"
          data-test-anchor-resize="south"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south-east"
          data-test-anchor-resize="south-east"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--south-west"
          data-test-anchor-resize="south-west"
        />
        <div
          class="TransformArea__anchor-resize TransformArea__anchor-resize--west"
          data-test-anchor-resize="west"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--north-east"
          data-test-anchor-rotate="north-east"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--north-west"
          data-test-anchor-rotate="north-west"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--south-east"
          data-test-anchor-rotate="south-east"
        />
        <div
          class="TransformArea__anchor-rotate TransformArea__anchor-rotate--south-west"
          data-test-anchor-rotate="south-west"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots > should render Element when width & height is auto 1`] = `
<DocumentFragment>
  <div
    class="className Element"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px; left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)); height: auto; margin: 0px; mix-blend-mode: initial; opacity: 1; overflow: hidden; padding: 0px; position: absolute; visibility: visible; width: auto;"
  />
</DocumentFragment>
`;
